--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "email-templates": "^8.0.8",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
@@ -22,10 +24,12 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "preview-email": "^3.0.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
