--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "core-js": "^3.20.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -30,6 +31,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "preview-email": "^3.0.5",
+    "regenerator-runtime": "^0.13.9",
     "winston": "^3.3.3"
   },
   "devDependencies": {
