--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node build/index.js",
     "clean": "rm -rf build",
-    "build": "npm run clean && npx babel src --out-dir build",
+    "build": "npm run clean && npx babel-cli src --out-dir build",
     "dev": "nodemon --exec babel-node ./src/index.js"
   },
   "author": "aasarawa@gmail.com",
