--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node build/index.js",
     "clean": "rm -rf build",
-    "build": "npm run clean && npx babel-cli src --out-dir build",
+    "build": "npm run clean && npx babel src --out-dir build",
     "dev": "nodemon --exec babel-node ./src/index.js"
   },
   "author": "aasarawa@gmail.com",
@@ -35,10 +35,10 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/node": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/node": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-node": "^4.1.0",
